Add documentation for /api/found
Added more documentation about the expected values for the array given to the /api/found endpoint

--- a/templates/home.html
+++ b/templates/home.html
@@ -203,7 +203,8 @@
     <h2>POST <code>/api/found</code></h2>
     
     <div class="link-wrapper">
-      Submits new material to the database through the API.
+      Submits new material to the database through the API. Values should be
+      submitted as <code>HASH:PLAIN</code> or <code>HASH:SALT:PLAIN</code>.
       <br>
       Authenticated: <code>true</code>
       <br>
