Add documentation for /api/download/file/num
Added extra documentation talking about what the value of num should be

--- a/templates/home.html
+++ b/templates/home.html
@@ -68,6 +68,8 @@
     <div class="link-wrapper">
         Allows the download of files from the server. <code>FILE</code> can be
         <code>wordlist</code>, <code>rules</code>, and <code>masks</code>.
+        <code>NUM</code> can be an integer requesting the number of lines to be
+        returned.
       <br>
       Authenticated: <code>true</code>
       <br>
