Move away from the term "private"
- Changed documentation and references in a refractor to change the term "private" to "user" when referring to uploading lists to the application
- This was done to remove the security-context of private lists to a more general term and highlight the risks of using the file upload feature.

--- a/templates/home.html
+++ b/templates/home.html
@@ -129,8 +129,8 @@
       <br>
       Query Params: <code>none</code>
       <br>
-      Access Role: <code>canViewPrivateLists</code> in user attributes and
-      <code>allow-private-lists</code> in server configuration
+      Access Role: <code>canViewUserLists</code> in user attributes and
+      <code>allow-user-lists</code> in server configuration
       <br>
       Execute request: <a href="/api/lists" target="_blank" rel="noopener noreferrer" class="link">
       </a>
@@ -284,8 +284,8 @@
             "canSearch": false,
             "canUpload": false,
             "canManage": false,
-            "canViewPrivateLists": false,
-            "canEditPrivateLists": false
+            "canViewUserLists": false,
+            "canEditUserLists": false
         }'
     </div>
   </div>
@@ -310,8 +310,8 @@
           </li>
       </ul>
       <br>
-      Access Role: <code>canEditPrivateLists</code> in user attributes and
-      <code>allow-private-lists</code> in server configuration
+      Access Role: <code>canEditUserLists</code> in user attributes and
+      <code>allow-user-lists</code> in server configuration
     </div>
 
     <div id="curl-command">curl -X POST \
